# stm32f410-ksgger-soldering-station

./: .gitmodules  CMakeLists.txt
app/: CMakeLists.txt
app/inc/: board.h  main.h  settings.h
app/src/: iron.c  main.c  settings.c  stm32f4xx_hal_msp.c
board/: STM32F410RBTx_FLASH.ld
board/inc/: stm32f4xx_hal_conf.h
common/inc/: stm32f4xx_it.h
common/src/: stm32f4xx_it.c  syscalls.c
drivers/: CMakeLists.txt
drivers/generalIO/: CMakeLists.txt  adc_global.c
drivers/graphics/: CMakeLists.txt  ssd1306.c  ssd1306.h
drivers/graphics/gui/: gui.c  main_screen.c  screen.h  widgets.c
drivers/graphics/gui/screens/: debug_screen.c  tip_settings_screen.c
drivers/graphics/u8g2/: u8g2.h
